--- a/src/pages/oyatu/Oyatu.module.css
+++ b/src/pages/oyatu/Oyatu.module.css
@@ -1,3 +1,14 @@
 body {
   background-color: #f0f8ff;
 }
+
+
+.image-container {
+  text-align: center; /* 画像を中央に配置したい場合 */
+  margin-top: 10px;   /* 上から少し余白を取る場合 */
+}
+
+.image-container img {
+  width: 100px;  /* 画像の幅を小さく */
+  height: auto;  /* 高さは自動調整 */
+}
