--- a/src/pages/oyatu/Oyatu.module.css
+++ b/src/pages/oyatu/Oyatu.module.css
@@ -27,4 +27,18 @@ body {
     top: 50%; /* 点の垂直位置 */
     transform: translateY(-50%); /* 点を垂直中央に配置 */
   }
+  @charset "utf-8";
+
+  a {
+    display: inline-block;
+    width: 160px;
+    height: 32px;
+    border: 1px solid black;
+    border-radius: 8px;
+    text-align: center;
+    line-height: 32px;
+    text-decoration: none;
+    color: inherit;
+  }
+
 }
