カーソル形変更

--- a/src/components/LinkButton.module.css
+++ b/src/components/LinkButton.module.css
@@ -22,5 +22,6 @@
   position: absolute;
   left: 50%; /* 左右の中央 */
   transform: translateX(-50%); /* 左右の中央に正確に配置 */
-  bottom: 10px; 
+  bottom: auto; 
+  cursor: pointer;
 }
