ホバーで水色に

--- a/src/pages/oyatu/Oyatu.module.css
+++ b/src/pages/oyatu/Oyatu.module.css
@@ -40,9 +40,8 @@ body {
     text-decoration: none;
     color: inherit;
   }
-
 }
 
-a:hover{
-  background-color:#ADD8E6;
+a:hover {
+  background-color: #add8e6;
 }
