--- a/src/pages/oyatu/Oyatu.module.css
+++ b/src/pages/oyatu/Oyatu.module.css
@@ -1,6 +1,18 @@
 body {
   background-color: #f0f8ff;
 
+  h1 {
+    padding: 0.5em; /*文字周りの余白*/
+    color: #010101; /*文字色*/
+    background: #eaf3ff; /*背景色*/
+    border-bottom: solid 3px #516ab6; /*下線*/
+  }
+
+  h2 {
+    padding: 1rem 2rem;
+    border: 3px dashed #000;
+  }
+
   ul li:last-child::marker {
     color: #00008b; /* 点の色を変更 */
     font-size: 50px; /* 点のサイズを変更 */
@@ -27,7 +39,6 @@ body {
     top: 50%; /* 点の垂直位置 */
     transform: translateY(-50%); /* 点を垂直中央に配置 */
   }
-  @charset "utf-8";
 
   a {
     display: inline-block;
